correction du overflow-y scroll sur le body

--- a/docs/css/_reboot.scss
+++ b/docs/css/_reboot.scss
@@ -17,6 +17,10 @@ body {
   margin: 0;
 }
 
+body {
+  overflow-y: scroll;
+}
+
 *,
 *:before,
 *:after {
