--- a/docs/css/components/_navigation.scss
+++ b/docs/css/components/_navigation.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   height: calc(100% - (var(--header-height) * 2) - 32px);
-  overflow-y: scroll;
+  overflow-y: auto;
   padding-top: 8px;
   position: fixed;
   top: calc((var(--header-height) * 2) + 24px);
